--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-.gameTrigger {
+#game-trigger {
     display: flex;
-    background-color: aqua;
-    border: 20px solid yellow;
-    padding: 100px;
-    margin: 100px;
+    flex-direction: column;
+    border: 8px solid black;
+    padding: 0;
+    margin: 0;
 }
